# virtual-brand

./: .gitignore  cli.py  config.json  pyproject.toml  start.bat  start.sh
core/: __init__.py  browser.py  client.py  logger.py  otp.py
data/: download_history.json
data/chrome_profile/: DevToolsActivePort  Last Version  Local State  first_party_sets.db
data/chrome_profile/profile_allvbadmin/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
data/chrome_profile/profile_allvbadmin/Extension Rules/: LOG
data/chrome_profile/profile_allvbadmin/Extension Scripts/: LOG
data/chrome_profile/profile_allvbadmin/Extension State/: LOG  LOG.old
data/chrome_profile/profile_allvbadmin/GCM Store/: LOG  LOG.old
data/chrome_profile/profile_allvbadmin/Session Storage/: LOG  LOG.old
data/chrome_profile/segmentation_platform/: ukm_db
data/chrome_profiles/portal_d/: DevToolsActivePort  Local State  first_party_sets.db
data/chrome_profiles/portal_f/: DevToolsActivePort  Local State  first_party_sets.db
data/chrome_profiles/portal_l/: DevToolsActivePort  Local State  first_party_sets.db
data/chrome_profiles/portal_w/: DevToolsActivePort  Local State  first_party_sets.db
grab/: grab_api_scraper.py  result.py  run_baseline.py
shopee/: init_sessions.py  open_dashboards.py  run_baseline.py
shopee/sessions/: session_allvbadmin.json  session_portal_d.json  session_portal_f.json  session_portal_w.json
(+216 files in other folders)
